plugins {
    id 'java'
}

group = 'by.innowise'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    java.sourceCompatibility= JavaVersion.VERSION_21
    java.targetCompatibility=JavaVersion.VERSION_21
}

dependencies {
    implementation 'org.postgresql:postgresql:42.7.4'
    implementation 'org.slf4j:slf4j-api:2.0.16'
    implementation 'ch.qos.logback:logback-classic:1.5.12'
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}